deployments/mbirchdk/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: mbirchwebsite-svc
    app.kubernetes.io/version: 2021.6.3
  name: mbirchwebsite-svc
  namespace: mbirchdk
spec:
  ports:
  - name: http-mbirchwebsite
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https-mbirchwebsite
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app.kubernetes.io/name: mbirchwebsite
  sessionAffinity: None
  type: ClusterIP
