deployments/mbirchdk/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: mbirchdkprod
  namespace: mbirchdk
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
spec:
  rules:
  - host: mbirch.dk
    http:
      paths:
      - backend:
          service:
            name: mbirchwebsite-svc
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - mbirch.dk
    secretName: mbirch.dk
